--- a/NexCalendar/NexCalendar/Base.lproj/LaunchScreen.storyboard
+++ b/NexCalendar/NexCalendar/Base.lproj/LaunchScreen.storyboard
@@ -14,13 +14,43 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch" translatesAutoresizingMaskIntoConstraints="NO" id="P8P-T7-SO8">
+                                <rect key="frame" x="-113.5" y="208" width="641" height="480"/>
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aST-YO-wax">
+                                <rect key="frame" x="56" y="78" width="302" height="205"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="Embrace Possibilities">
+                                        <attributes>
+                                            <color key="NSColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <font key="NSFont" metaFont="system" size="40"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="P8P-T7-SO8" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="QNG-RL-cG5"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="aST-YO-wax" secondAttribute="bottom" constant="579" id="V9g-oH-o5R"/>
+                            <constraint firstItem="P8P-T7-SO8" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="bh6-xd-u3L"/>
+                            <constraint firstItem="P8P-T7-SO8" firstAttribute="centerX" secondItem="aST-YO-wax" secondAttribute="centerX" id="rdB-5w-6hu"/>
+                            <constraint firstItem="aST-YO-wax" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="56" id="sag-dY-moH"/>
+                            <constraint firstItem="aST-YO-wax" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="34" id="w41-jF-Ml3"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52.173913043478265" y="375"/>
+            <point key="canvasLocation" x="-242.0289855072464" y="281.25"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="launch" width="640.5" height="480"/>
+    </resources>
 </document>
